--- a/.tmux.conf
+++ b/.tmux.conf
@@ -160,8 +160,8 @@ bind P choose-buffer # choose which buffer to paste from
 
 # -- user defined overrides ----------------------------------------------------
 
-if '[ -f ~/.tmux.conf.local ]' 'source ~/.tmux.conf.local'
-
+# if '[ -f ~/.tmux.conf.local ]' 'source ~/.tmux.conf.local'
+source ~/.tmux.conf.local
 
 # -- 8< ------------------------------------------------------------------------
 
